# wandb-fc-2025-agent-workshop

./: .env.base  .gitignore  20251030_W&B_FCTokyo-2025_AIAgentWorkshop.ipynb  README.md  langgraph.json  main.py  pyproject.toml  requirements.txt  ruff.toml
app/application/service/nodes/gather_requirements/: chain.py
app/application/use_case/.arxiv_agent/: agent.py
app/application/use_case/.arxiv_agent/models/: __init__.py  receive_task.py
app/application/use_case/.arxiv_agent/nodes/: read_documents.py  search_documents.py
app/application/use_case/execute_task_agent/: agent.py  react.py
app/application/use_case/execute_task_agent/models/: read_documents.py  state.py
app/application/use_case/execute_task_agent/nodes/: __init__.py  manage_task.py  read_documents.py  receive_task.py  search_documents.py
app/application/use_case/execute_task_agent/tools/: submit_content.py
app/application/use_case/research_agent/: agent.py
app/application/use_case/research_agent/models/: __init__.py  build_research_plan.py  evaluate_task.py  execute_task.py  gather_requirements.py  state.py
app/application/use_case/research_agent/nodes/: __init__.py  _execute_task.py  build_research_plan.py  evaluate_task.py  execute_task.py  feedback_requirements.py  gather_requirements.py  generate_report.py
app/application/use_case/research_agent/tools/: search_web.py  submit_content.py
app/core/: config.py  logging.py
app/core/middleware/: handle_tool_errors.py  validate_output.py
app/domain/: base_agent.py
app/domain/enums/: base.py  priority.py  task_status.py
app/domain/models/: __init__.py  document.py
app/exp/: run_agent.py
app/infrastructure/api_client/: __init__.py  base.py  jina_client.py
app/infrastructure/blob_manager/: __init__.py  base.py  local.py
app/infrastructure/content_search_client/: __init__.py  base.py
app/infrastructure/content_search_client/arxiv/: arxiv_search_client.py
app/infrastructure/content_search_client/arxiv/models/: __init__.py  arxiv_paper.py  arxiv_url.py
app/infrastructure/content_search_client/perplexity/: perplexity_search_client.py
app/infrastructure/content_search_client/perplexity/models/: search_result.py
app/infrastructure/llm_chain/: base.py  openai_chain.py
app/infrastructure/llm_chain/enums/: model_name.py
app/infrastructure/pdf_reader/: __init__.py  base.py  jina_reader.py
app/workflow/: agent.py
app/workflow/enums/: __init__.py  node.py
app/workflow/models/: __init__.py  build_research_plan.py  decompose_query.py  execute_task.py  gather_requirements.py  state.py
app/workflow/nodes/: __init__.py  build_research_plan.py  execute_task.py  feedback_requirements.py  gather_requirements.py  generate_report.py
app/workflow/tools/: __init__.py  search_web.py  submit_content.py
scripts/: create_env_file.sh
storage/fixtures/: state_from_build-research-plan.json  state_from_execute-task.json
storage/outputs/: research_report.md
storage/prompts/arxiv_search_client/: build_search_query.jinja
storage/prompts/execute_task_agent/nodes/: receive_task.jinja
storage/prompts/params/: decompose_query.json  gather_requirements.json
storage/prompts/research_agent/nodes/: build_research_plan.jinja  gather_requirements.jinja  generate_report.jinja
